--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_hooks: null
   observable_ish: ^2.1.4
   image_picker: ^0.6.7+11
+  mockito: ^4.1.2
 
 dev_dependencies:
   flutter_test:
